# term-vector-extraction

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCS.md  MyStopWords.txt  README.md  SimilarStopWords.txt  TODO  api.py  chain.py  documents.py  eval.py  extractors.py  format.py  get_keywords.py  get_keywords_async.py  get_keywords_llm.py  get_relevant.py  get_relevant_async.py  get_translations.py  lexis.py  main.py  pyproject.toml  query.json  requirements.txt  requirements_dev.txt  requirements_vector.txt  script.cmd  split_data.py  update_keywords.py  update_relevant.py  vaildate.ipynb  vectorization.ipynb
data/: Tve документация.docx
data/prompts/: en_3.json  en_expand.json  en_kws.json  ru_3.json  ru_expand.json  ru_kws.json
extractors/: ML.py  __init__.py  algo.py  translators.py
extractors/translators/: llm.py  promt.py
tve/: __init__.py  base.py  lexis.py  pipeline.py  prompts.py  utils.py
tve/documents/: __init__.py  blank.py  es.py  fips.py  fs.py  json.py  xml.py
tve/extractors/: ML.py  __init__.py  algo.py
tve/translators/: __init__.py  langchain.py  llama.py  llm.py  prompts.py  promt.py
