[tool.poetry]
name = "term vector extraction"
version = "0.1.0"
description = ""
authors = ["Ramnck <r.karet@gmail.com>"]
readme = "README.md"


[tool.black]
target-version = ['py311']


[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 311


[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.3"
keybert = "^0.8.5"
yake = {git = "https://github.com/LIAAD/yake"}
pymorphy3 = "^2.0.2"
nltk = "^3.8.2"
python-dotenv = "^1.0.1"
aiofiles = "^24.1.0"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
